InterSpec_resources/InterSpec.css
/* ... */
li{ padding-top: 0; }
table { margin-bottom:0; }
a:hover { color:#E88400; border-bottom:none; }
th, td { border: none; padding: 0; vertical-align: none; text-align: none; }



body
{
  background: none;
  color: none;
  background-color: none;
  font-size: 14px;
  font-family:Helvetica, Arial, Verdana, sans-serif;
  padding:5px;
}

h1 
{ 
  color: black;
  font-size: 2em;
  font-weight: bold;
  margin-bottom:0;
  font-family: Times;
  margin-before: 0.15em;
  margin-after: 0.25em;
-webkit-margin-before: 0.15em;
-webkit-margin-after: 0.25em;
-webkit-margin-start: 0px;
-webkit-margin-end: 0px;
}

.Wt-tableview .Wt-spacer
{
  /* background: white;*/
}


.HideSpinners .HideSpinners
{
  width: 8em;
  /* remove the up/down spinbox for Firefox - if you re-enable this, also re-enable the c++ code to set step size */
  -moz-appearance: textfield;
}

input.HideSpinners::-webkit-outer-spin-button, input.HideSpinners::-webkit-inner-spin-button
{
  /* Remove the up/down arrow on spin box for Chrome, Safari, Edge, Opera - if you re-enable this, also re-enable the c++ code to set step size */
  -webkit-appearance: none;
  margin: 0;
}


.clearsession
{
  padding-top: 7px;
  text-align: center;
}

.clearsessiontxt, .RemoteRidToastButtons > div
{
  padding: 3px;
  padding-top: 4px;
  border: 1px solid grey;
  
  cursor: pointer;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  background-color: #EEEEEE;
}

.clearsessiontxt
{
  margin-left: auto;
  margin-right: auto;
}

.RemoteRidToastButtons
{
  padding-top: 7px;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
}

.RemoteRidToastButtons > div
{
}

/* The MenuBar CSS class is added to the title bar both for browser-based, and Electron based (that
 use HTML menu) app sessions
 */
.MenuBar
{
  border-bottom: 1px solid grey;
  background: #FFF;
}

/* The WebMenuBar CSS class is added to the title bar, for browser-based desktop app sessions (e.g.,
 not added for electron builds that use HTML menus)
 */
.WebMenuBar
{
  padding-left: 8px;
  height: 24px;  /*pics are 18px with 3px top padding*/
  font-size: 15px;
  padding-top: 0px;
}


/* This is the SNL logo that is placed on the right-hand side of the title bar on desktop browser-based sessions. */
.SnlWebMenuBarLogo
{
  padding-top: 3px;
  padding-right: 8px;
  float: right;
}



/* The PopupDivMenu or PopupDivMenuPhone CSS class is added to the actual popup div that holds the
   menu items for all instances of the C++ PopupDivMenu class.  
 
 AppMenu CSS class is added to the same popup divs, but only for the app-level menus (i.e. "InterSpec",
 "View", "Tools", and "Help") on non-mobile.
 */
.PopupDivMenu
{
  background-color: #FAFAFA;
  border: solid 1px #e1e1e1;
  max-height: 90%;
  overflow-y: auto;
}

/* Add a drop-shadow for the app-level menus. */
.PopupDivMenu.AppMenu
{
  box-shadow: 0 5px 5px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
}

/* Add a slightly more petite drop shadow for sub-menus.
 TODO: it would be nice to move the sub-menu to the right by a couple pixels, but I dont see how to hack the CSS so the Wt.fitToWindow JS function wont clober the efforts
 */
.PopupDivMenu.AppSubMenu
{
  box-shadow: 0 5px 3px -3px rgba(0,0,0,.12), 4px 8px 6px 1px rgba(0,0,0,.08), 5px 3px 6px 1px rgba(0,0,0,.06);
}

.PopupDivMenu.ContextSubMenu
{

}


/*
 TODO: it would be nice to hide separators that are at the bottom and top of menus; this happens when all the menu items above or below the separator is hidden.  For some reason selectors like the next dont actually function (but they will aw part of a jQuery selector).
.PopupDivMenu > li.Wt-separator:visible:last
{
  border-top: 0px;
  border-bottom: 0px;
  margin: 0px 0px;
}
 */

.PopupDivMenuItem-disabled
{
  background: none;
  color: #D2D2D2;
}

.PopupDivMenu li
{
  padding-top: 4px;
  padding-bottom: 4px;
}

.PopupDivMenu li.Wt-separator
{
  padding-top: 0px;
  padding-bottom: 0px;
}


.PopupMenuParentButton, .PopupMenuParentButton:hover
{
  height: 23px; /*leave 1 px for WebMenuBar lower border */
  padding: 4px 8px 3px 8px;
  margin:0px 0px;
  font-weight:normal;
  background: #FFFFFF;
  color: black;
  border: none;
  vertical-align: top; /* necessary or else on Safari the titlebar border will be partially overlapped - not entirely sure why*/
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  border-radius: 2px;
  
  -moz-box-shadow: none !important;
  -webkit-box-shadow: none !important;
  box-shadow: none !important;
  outline: none;
}


.PopupMenuParentButton:hover:not(.active)
{
  background: rgba(128, 128, 128, 0.25);
}

.PopupMenuParentButton.active
{
  background: rgba(128, 128, 128, 1.0);
  
  -moz-box-shadow: none !important;
  -webkit-box-shadow: none !important;
  box-shadow: none !important;
}


.PopupDivMenuWidget.active
{
  background-color: #FAFAFA;
  color: black;
}


.NumPeakSelect
{
  border:2px solid blue;
}

.RoundMenuIcon, .RoundMenuIcon:hover, button.RoundMenuIcon, button.RoundMenuIcon:hover {
    /* background-image: url('../InterSpec_resources/images/menu_icon_round.svg'); */
    background-image: url('../InterSpec_resources/images/more_menu_icon.svg');
    background-repeat: no-repeat;
    width: 24px;
    height: 24px;
    background-color: rgba(0,0,0,0);
    border: none;
    cursor: pointer;
    border-radius: 12px;
    background-position: 0.25px;
}

.RoundMenuIcon {
  opacity: 0.6;
}

.RoundMenuIcon:hover {
  opacity: 0.9;
}

.RoundMenuIcon.active {
  opacity: 1.0;
}




.legend {
    border: none;
    background: none;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}
/* ... */

